Tests/CompilerTests/negative/associated-type-inequality.expected
negative/associated-type-inequality.hylo:9.14-15: error: cannot pass value of type '(U::P).X' to parameter 'let (T::P).X'
  check<T.X>(x)
             ^
